# ai-assistant

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  learning_agent.py
backend/app/api/v1/: __init__.py  chat.py  knowledge_tree.py  models.py  personas.py  projects.py  tasks.py
backend/app/common/: __init__.py  logger.py
backend/app/graphs/: __init__.py  learning_workflow.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/services/: __init__.py  document_loader.py  kb_manager.py  knowledge_tree_service.py  llm_extractors.py  persona_service.py  project_service.py  task_service.py
backend/app/tools/: __init__.py  rag_tools.py
backend/tests/: test_day3_style_injector.py  test_day5_integration.py  test_day5_kb_manager.py  test_day6_rag_agent.py  test_day6_ragas_eval.py  test_day7_workflow.py  test_day8_workflow.py  test_integration_http.py  test_models.py
docs/: architecture.md
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx
web/app/(utility)/: layout.tsx
web/app/(workspace)/: layout.tsx
web/components/layout/: Header.tsx  Sidebar.tsx
web/components/ui/: Button.tsx  Card.tsx  Input.tsx  Select.tsx
web/lib/: api.ts  types.ts
web/prototype/: chat.html  index.html  knowledge.html  login.html  personas.html  settings.html  tasks.html  tree.html
web/prototype/css/: base.css  components.css  pages.css  themes.css
web/prototype/js/: interactions.js  theme-switcher.js
(+13 files in other folders)
