[project]
name = "ai-assistant-backend"
version = "0.1.0"
description = "AI 学习助手后端：LangChain + LangGraph + FastAPI + MySQL，支持用户风格克隆与三库分离"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "pymysql>=1.1",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "chromadb>=0.5",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "sse-starlette>=3.4.5",
    "aiosqlite>=0.22.1",
    "langchain-chroma>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
